2003-10-03  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-node-modification-add-after.c, cong-node-modification-add-before.c, cong-node-modification-make-orphan.c, cong-node-modification-set-parent.c

	Various fixes in tree modification: fixed a typo in AddBefore, and fixed history of MakeOrphan
	
	* cong-command.c

	Added debug code; removed clipboard handling from undo/redo
	
	* cong-editor-widget3.c

	Disabled overzealous assertion

	* xmledit.c

	Removed clipboard state from the undo/redo history

2003-10-02  Robert Varga

	* cong-dispspec-registry.c, cong-document.h, cong-dtd.h,
	cong-editor-node.h, cong-eel.c, cong-error-dialog.h, cong-location.h,
	cong-plugin.h, cong-text-cache.h, global.h, popup.c, xmldata.c

	Added gtk-doc information.

2003-10-02  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-command.c, cursor.c

	Fixed para splitting; now works, and works with undo/redo

	* cong-command.c, cong-command.h, cong-document.c, cong-document.h, cong-editor-node-text.c, cong-editor-widget3.c, cong-location.c, cong-location.h, cong-modification-cursor-change.c, cong-modification-selection-change.c, cong-node-modification-add-after.c, cong-node-modification-add-before.c, cong-node-modification-make-orphan.c, cong-node-modification-remove-attribute.c, cong-node-modification-set-attribute.c, cong-node-modification-set-parent.c, cong-node-modification-set-text.c, cong-range.c, cong-selection.h, cong-util.c, cursor.c, plugin-docbook.c, popup.c, select.c, tree.c, xmldata.c, xmledit.c

	Made old document change private, and recoded the application to make use of new CongCommand API for undo/redo support

2003-10-01  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-command.c, cong-editor-widget3.c, plugin-cleanup-source.c, popup.c

	Further undo/redo-ification
	
	* popup.c, xmledit.c

	Undo/redo-ification of Span Tag application, and for clipboard operations

	* cong-node-modification-make-orphan.c, cong-node-modification-set-parent.c
